--- a/weight/Debug/makefile
+++ b/weight/Debug/makefile
@@ -53,6 +53,9 @@ default.size.stdout \
 OBJDUMP_LIST += \
 weight.list \
 
+OBJCOPY_HEX += \
+weight.hex \
+
 
 # All Target
 all: main-build
@@ -76,12 +79,17 @@ weight.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
+weight.hex: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "weight.hex"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 # Other Targets
 clean:
-	-$(RM) default.size.stdout weight.elf weight.list weight.map
+	-$(RM) default.size.stdout weight.elf weight.hex weight.list weight.map
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX)
 
 fail-specified-linker-script-missing:
 	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
